[project]
name = "accumulation_tree"
version = "0.6.4"
description = "Red/black tree with support for fast accumulation of values in a key range"
authors = [
  {name = "Timo Kluck", email = "tkluck@infty.nl"},
]
readme = "README.md"
license = "MIT"
keywords = ["BST", "data structure", "accumulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/tkluck/accumulation_tree"

[build-system]
requires = ["setuptools>=77", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.setuptools.ext-modules]]
name = "accumulation_tree.accumulation_tree"
sources = ["src/accumulation_tree/accumulation_tree.pyx"]
